classes data show perfect
